--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "alee0510",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
