--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chalk": "^5.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "uuidv4": "^6.2.13"
