--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "^5.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "uuidv4": "^6.2.13",
     "yup": "^1.2.0"
   }
