--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mysql2": "^3.4.0",
     "uuidv4": "^6.2.13",
     "yup": "^1.2.0"
   }
