--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "alee0510",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mysql2": "^3.4.0",
     "sequelize": "^6.32.1",
