--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mysql2": "^3.4.0",
+    "nodemailer": "^6.9.3",
     "sequelize": "^6.32.1",
     "uuidv4": "^6.2.13",
     "yup": "^1.2.0"
