--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.2.0",
+    "cloudinary": "^1.37.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.4.0",
     "nodemailer": "^6.9.3",
     "sequelize": "^6.32.1",
-    "uuidv4": "^6.2.13",
     "yup": "^1.2.0"
   },
   "devDependencies": {
