--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # restart: on-failure
+    restart: on-failure
     container_name: myapi
     volumes:
       - .:/user/app
@@ -17,7 +17,7 @@ services:
     environment:
       - PORT=$PORT
       - DB_HOST=database
-      - DB_PORT=3360
+      - DB_PORT=$DB_PORT
       - DB_NAME=$DB_NAME
       - DB_USER=$DB_USER
       - DB_PASS=$DB_PASS
@@ -42,7 +42,7 @@ services:
     image: mysql:5.7
     container_name: mydb
     command: --default-authentication-plugin=mysql_native_password
-    # restart: always
+    restart: on-failure
     env_file:
       - .env
     environment:
@@ -52,7 +52,7 @@ services:
       - mysql-db:/var/lib/mysql
       - ./scripts:/docker-entrypoint-initdb.d
     ports:
-      - 3360:3306
+      - 3306:3306
     networks : 
       - mynetwork
 networks:
